<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nawal.schooldiaryapp.mainfolder.LoginActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mode" android:title="@string/action_mode"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_city" android:title="@string/action_city"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_school" android:title="@string/action_school"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>